# crypto-handler

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE.md  README.md
cmake/: dependencies.cmake  tests.cmake
include/private/jlizard/: openssl_error.h
include/public/jlizard/: CryptoHandler.h
src/: CryptoHandler.cpp
tests/: unit_tests.cpp
